<resources>
    <string name="app_name">Euskomet</string>

    <!-- GENERAL -->
    <string name="atras">Atrás</string>
    <string name="entrar">ENTRAR</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="registrar">REGISTRAR</string>
    <string name="aceptar">ACEPTAr</string>

    <!-- Main Activity-->
    <string name="bienvenido">BIENVENIDO/A</string>
    <string name="error_com">Error comunicación</string>


    <!-- Login-->
    <string name="login">Login</string>
    <string name="Logeado">Te has logueado</string>
    <string name="Contra_inc">La contraseña introducida no es correcta</string>
    <string name="Usu_inc">No existe dicho usuario en el sistema</string>
    <string name="intro_usu_contra">Introduzca usuario y contraseña</string>
    <string name="usuario">Usuario...</string>
    <string name="contraseña">Contraseña...</string>
    <string name="contraseñaOlvidada">Olvidé mi contraseña</string>
    <string name="contraseñaOlvidada_toast">Por favor, introduzca un nombre de usuario para recuperrar la contraseña</string>

    <!-- Recuperar contraseña-->
    <string name="recuperarContraseña">Recuperar contraseña</string>
    <string name="preguntaSeguridad_recuperarContra">Pregunta de seguridad:</string>
    <string name="res_co">La respuesta es correcta</string>
    <string name="res_in">La respuesta no es correcta</string>
    <string name="contra_cam">Contraseña cambiada correctamente</string>
    <string name="contra_no">Las contraseñas no coinciden</string>


    <!-- Registro-->
    <string name="registro">Registro</string>
    <string name="contraseña1registro">Contraseña...</string>
    <string name="contraseña2registro">Confirmar contraseña...</string>
    <string name="preguntaSeguridad_registro">Escoja una pregunta de seguridad y su respuesta por favor:</string>
    <string name="respuestaClave">Respuesta...</string>
    <string name="usu_res">Usuario registrado correctamente</string>
    <string name="error_base">Error al conectar con la base de datos</string>

    <string-array name="preguntas">
        <item>¿Dónde naciste?</item>
        <item>¿Cuál es el segundo apellido de tu madre?</item>
        <item>¿En qué año naciste?</item>
        <item>¿Tu colegio de primaria?</item>
    </string-array>

    <!-- Menu Principal-->
    <string name="municipios">Municipios</string>
    <string name="espaciosNaturales">Espacios naturales</string>
    <string name="ranking">Top ranking</string>
    <string name="favoritos">Favoritos</string>

    <!-- Mostrar informacion-->


    <string name="titulo_mo">Información</string>

    <string name="dato1">Nombre</string>

    <string name="dato2">Provincia</string>

    <string name="tipo">tipo</string>

    <string name="dato3">Descripcion</string>

    <string name="fotos">Fotos</string>

    <string name="mapa">Localización</string>

    <string name="historico">Histórico</string>

    <string name="añadir_favoritos">Añadir a Favoritos</string>

    <string name="compartir_loc">Compartir Localización</string>
    <string name="compartir_img">Compartir Imagen</string>

    <string name="Error_Compartir">No hay ninguna en la base de datos</string>

    <!-- Fotos -->
    <string name="Titulo_Fotos">Fotos</string>
    <string name="guardar_foto">Guardar foto</string>
    <string name="Exito_Guardar">Exito al guardar la imagen</string>

    <!-- Mapas -->
    <string name="No_coordenadas">No hay Coordenadas de</string>
    <!-- historico -->
    <string name="Sin_datos">No se ha podido cargar los datos</string>
    <!-- Compartir -->
    <string name="strCom">Te ha compartido una ubicacion</string>
    <string name="errorCom">No se ha podido compartir ninguan ubicación</string>
</resources>