<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoPantalla"
    tools:context=".Registro">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="168dp"
        android:layout_height="47dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="150dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/registro"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="150dp"
        android:src="@drawable/icono_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="150dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <EditText
        android:id="@+id/etContraseña1"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="150dp"
        android:ems="10"
        android:hint="@string/contraseña1registro"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <EditText
        android:id="@+id/etContraseña2"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="150dp"
        android:ems="10"
        android:hint="@string/contraseña2registro"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContraseña1" />

    <EditText
        android:id="@+id/etRespuesta"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="150dp"
        android:ems="10"
        android:hint="@string/respuestaClave"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinPregunta" />

    <Spinner
        android:id="@+id/spinPregunta"
        android:layout_width="360dp"
        android:layout_height="30dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="150dp"
        android:background="@color/spinner"
        android:dropDownSelector="@color/blancoVerdoso"
        android:entries="@array/preguntas"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="233dp"
        android:layout_height="49dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="182dp"
        android:text="@string/preguntaSeguridad"
        android:textAlignment="center"
        android:textColor="@color/textos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContraseña2" />

    <Button
        android:id="@+id/button7"
        android:layout_width="142dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="150dp"
        android:onClick="registrar"
        android:text="@string/registrarse"
        android:textColor="@color/textosBoton"
        app:backgroundTint="@color/botones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/etRespuesta" />

    <Button
        android:id="@+id/button8"
        android:layout_width="93dp"
        android:layout_height="48dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/atras"
        android:textColor="@color/textosBoton"
        app:backgroundTint="@color/botones"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRespuesta" />

</androidx.constraintlayout.widget.ConstraintLayout>